--- a/package.json
+++ b/package.json
@@ -42,5 +42,20 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "description": "## Project setup ``` npm install ```",
+  "main": "babel.config.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/danimog/appv3.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/danimog/appv3/issues"
+  },
+  "homepage": "https://github.com/danimog/appv3#readme"
 }
